--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <li><a href="#">About</a></li>
             <li><a href="#">Service</a></li>
             <li><a href="#">Blog</a></li>
-            <li><a href="#">Contact Us</a></li>
+            <li><a id="contact-us-button" href="#">Contact Us</a></li>
         </ul>
     </nav>
 
