--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-    <!-- <link rel="stylesheet" href="cardStyle.css"> -->
+    <title>Index</title>
+    <link rel="stylesheet" href="assets/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap"
@@ -18,7 +17,7 @@
         <input type="checkbox" id="nav-check">
         <div class="nav-header">
             <div class="nav-title">
-                Company
+                <a href="index.html">Company</a>
             </div>
         </div>
         <div class="nav-btn">
@@ -30,11 +29,11 @@
         </div>
 
         <ul class="nav-list">
-            <li><a class="active" href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Service</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a id="contact-us-button" href="#">Contact Us</a></li>
+            <li><a class="active" href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="services.html">Service</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a id="contact-us-button" href="contact.html">Contact Us</a></li>
         </ul>
     </nav>
 
@@ -83,7 +82,7 @@
                     </svg>
                 </div>
                 <div class="text">
-                    <h1>Web Application</h1>
+                    <h1 class="fs-24">Web Application</h1>
                     <p>Lorem Ipsum is simply</p>
                 </div>
             </div>
@@ -115,7 +114,7 @@
                     </svg>
                 </div>
                 <div class="text">
-                    <h1>SEO</h1>
+                    <h1 class="fs-24">SEO</h1>
                     <p>Lorem Ipsum is simply</p>
                 </div>
             </div>
@@ -159,7 +158,7 @@
                     </svg>
                 </div>
                 <div class="text">
-                    <h1>AR/VR Solutions</h1>
+                    <h1 class="fs-24">AR/VR Solutions</h1>
                     <p>Lorem Ipsum is simply</p>
                 </div>
             </div>
@@ -187,7 +186,7 @@
                     </svg>
                 </div>
                 <div class="text">
-                    <h1>Mobile Applications</h1>
+                    <h1 class="fs-24">Mobile Applications</h1>
                     <p>Lorem Ipsum is simply</p>
                 </div>
             </div>
