--- a/about.html
+++ b/about.html
@@ -116,6 +116,15 @@
         </div>
     </section>
 
+    <section>
+        <div class="container">
+            <p>Lorem Ipsum is simply dummy</p>
+            <p id="lastP">text of printing.</p>
+            <input type="email" placeholder="Enter your email" />
+            <button class="btn-flat btn-dark m-0">SUBSCRIBE</button>
+        </div>
+    </section>
+
 </body>
 
 </html>
