--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
             <p>KODEX TECHNOLOGY (PVT) LTD is a team of experienced mobile and web applications and website builders
                 measuring dozens of completed projects. We build and develop mobile applications for several top
                 platforms, including Android & IOS. </p>
-            <button class="btn-normal">Contact us</button>
-            <button class="btn-outline">View more</button>
+            <button class="btn-rounded btn-normal">Contact us</button>
+            <button class="btn-rounded btn-outline">View more</button>
         </div>
     </section>
 
@@ -193,7 +193,15 @@
         </div>
     </section>
 
-    
+    <section>
+        <div class="container">
+            <p>Lorem Ipsum is simply dummy</p>
+            <p id="lastP">text of printing.</p>
+            <input type="email" placeholder="Enter your email" />
+            <button class="btn-flat btn-dark m-0">SUBSCRIBE</button>
+        </div>
+    </section>
+
 </body>
 
 </html>
